--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,108 @@
-highlight_text==0.2
+altair==5.3.0
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==2.4.1
+attrs==23.2.0
+backports.csv==1.0.7
+beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.7.4
+cfgv==3.4.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.2
+decorator==4.4.2
+distlib==0.3.8
+Django==5.0.7
+exceptiongroup==1.2.1
+executing==2.0.1
+filelock==3.15.4
+fonttools==4.53.1
+frozendict==2.4.4
+gitdb==4.0.11
+GitPython==3.1.43
+highlight-text==0.2
+html5lib==1.1
+identify==2.5.36
+idna==3.7
+image==1.5.33
+imageio==2.34.2
+imageio-ffmpeg==0.5.1
+ipykernel==6.29.5
+ipython==8.26.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+lazyfont @ git+https://github.com/JosephBARBIERDARNAL/lazyfont.git@a73809b7bea3f3b04f1249296fb6515e8f72fc7c
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.9.1
-streamlit==1.36.0
-highlight_text==0.2
-pypalettes==0.1.1
-yfinance==0.2.40
-pandas==2.2.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+moviepy==1.0.3
+multitasking==0.0.11
+nest-asyncio==1.6.0
+nodeenv==1.9.1
 numpy==2.0.0
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+peewee==3.17.5
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+polars==1.0.0
+pre-commit==3.7.1
+proglog==0.1.10
+prompt_toolkit==3.0.47
+protobuf==5.27.2
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
+pydeck==0.9.1
+pyfonts @ git+https://github.com/JosephBARBIERDARNAL/pyfonts.git@ea214241faafbd3ade4655ce2594be88f4cfca19
+Pygments==2.18.0
+pypalettes==0.1.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.18.1
+ruff==0.5.5
 scipy==1.14.0
-git+https://github.com/JosephBARBIERDARNAL/pyfonts.git
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+sqlparse==0.5.0
+stack-data==0.6.3
+streamlit==1.36.0
+tablib==3.6.1
+tenacity==8.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+virtualenv==20.26.3
+watchdog==4.0.1
+wcwidth==0.2.13
+webencodings==0.5.1
+Yahoo-ticker-downloader==3.0.1
+yfinance==0.2.40
